--- a/.github/workflows/platformatic-deploy.yml
+++ b/.github/workflows/platformatic-deploy.yml
@@ -1,11 +1,20 @@
+# Github action to deploy Platformatic DB application to the cloud
+
+Example of usage:
+
 name: Deploy Platformatic DB application to the cloud
+
 on:
   pull_request:
     paths-ignore:
       - 'docs/**'
       - '**.md'
+
 jobs:
   build_and_deploy:
+    permissions:
+      contents: read
+      pull-requests: write
     runs-on: ubuntu-latest
     steps:
       - name: Checkout application project repository
@@ -13,13 +22,16 @@ jobs:
       - name: npm install --omit=dev
         run: npm install --omit=dev
       - name: Deploy project
-        uses: platformatic/onestep@v0.0.8
+        uses: platformatic/onestep@v1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          platformatic_api_key: ${{ secrets.PLATFORMATIC_API_KEY }}
+          platformatic_workspace_id: 948720db-7e29-4cc6-b0f9-ca61ddc68707
+          platformatic_workspace_key: ${{ secrets.PLATFORMATIC_WORKSPACE_KEY }}
           platformatic_config_path: ./platformatic.db.json
-
-
-
-
-
+          variables: custom_variable1, custom_variable2
+          secrets: custom_secret1
+        env:
+          plt_custom_variable: test1
+          custom_variable1: test2
+          custom_variable2: test3
+          custom_secret1: test5
