--- a/.github/workflows/platformatic-deploy.yml
+++ b/.github/workflows/platformatic-deploy.yml
@@ -1,7 +1,4 @@
 # Github action to deploy Platformatic DB application to the cloud
-
-Example of usage:
-
 name: Deploy Platformatic DB application to the cloud
 
 on:
@@ -22,7 +19,7 @@ jobs:
       - name: npm install --omit=dev
         run: npm install --omit=dev
       - name: Deploy project
-        uses: platformatic/onestep@v1
+        uses: onestep@development
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           platformatic_workspace_id: 204d64b8-f927-4695-8aeb-ff7dcea7e432
