--- a/.github/workflows/platformatic-deploy.yml
+++ b/.github/workflows/platformatic-deploy.yml
@@ -19,7 +19,7 @@ jobs:
       - name: npm install --omit=dev
         run: npm install --omit=dev
       - name: Deploy project
-        uses: onestep@development
+        uses: platformatic/onestep@development
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           platformatic_workspace_id: 204d64b8-f927-4695-8aeb-ff7dcea7e432
