--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "demo-app",
-  "version": "1.0.2",
-  "description": "Testing shaq regenerate workspace",
+  "version": "1.0.3",
+  "description": "Testing shaq regenerate workspace 2",
   "main": "plugin.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
