--- a/.github/workflows/platformatic-deploy.yml
+++ b/.github/workflows/platformatic-deploy.yml
@@ -19,11 +19,11 @@ jobs:
       - name: npm install --omit=dev
         run: npm install --omit=dev
       - name: Deploy project
-        uses: platformatic/onestep@latest
+        uses: platformatic/onestep@development
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           platformatic_workspace_id: 89885f6a-0514-49e3-a0f0-0427cdc515f9
-          platformatic_workspace_key: ${{ secrets.PLATFORMATIC_WORKSPACE_DYNAMIC_KEY }}
+          platformatic_workspace_key: ${{ secrets.PLATFORMATIC_WORKSPACE_KEY }}
           platformatic_config_path: ./platformatic.db.json
           variables: custom_variable1, custom_variable2
           secrets: custom_secret1
