--- a/.github/workflows/platformatic-deploy.yml
+++ b/.github/workflows/platformatic-deploy.yml
@@ -19,7 +19,7 @@ jobs:
       - name: npm install --omit=dev
         run: npm install --omit=dev
       - name: Deploy project
-        uses: platformatic/onestep@v1
+        uses: platformatic/onestep@development
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           platformatic_workspace_id: 89885f6a-0514-49e3-a0f0-0427cdc515f9
