--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "demo-app",
-  "version": "1.0.3",
-  "description": "Test shared workspace static",
+  "version": "1.0.4",
+  "description": "Test shared workspace static 4",
   "main": "plugin.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
